# gitfourchette

./: .gitignore  CHANGELOG.md  README.md  gen_icons.py  gen_ui.py  gitfourchette-fromsource.desktop  gitfourchette.desktop  pyproject.toml  pytest.ini  run.desktop  run.sh  setup.py  test.sh  update_resources.py
.github/workflows/: appimage.yml  macapp.yml  tests.yml
GitFourchette/: CommitDialog.py  DiffActionSets.py  DiffModel.py  DiffView.py  FileListView.py  GraphDelegate.py  GraphView.py  Lanes.py  MainWindow.py  PrefsDialog.py  QTabWidget2.py  RemoteProgress.py  RepoState.py  RepoWidget.py  Sidebar.py  TrackedBranchDialog.py  TreeView.py  Worker.py  __main__.py  colors.py  diff_formats.py  globals.py  lanes.py  patch.py  settings.py  status.py  trash.py  util.py
assets/: assets.qrc  style.qss
gitfourchette/: __main__.py  actiondef.py  actionflows.py  allgit.py  allqt.py  appconsts.py  application.py  assets.py  assets_rc.py  benchmark.py  colors.py  commitlogmodel.py  commitmetadata.py  diffarea.py  diffformats.py  diffmodel.py  diffstyle.py  diffview.py  dirtyfilelistview.py  exttools.py  filelistentry.py  filewatcher.py  globalshortcuts.py  globalstatus.py  graph.py  graphdelegate.py  graphgenerator.py  graphmarkers.py  graphpaint.py  graphtrickle.py  graphview.py  hiddencommitsolver.py  localization.py  log.py  mainwindow.py  mergedriver.py  nav.py  navhistory.py  patch.py  porcelain.py  (+26 more)
gitfourchette/assets/: en.qm  fr.qm  gitfourchette_en.qm  gitfourchette_fr.qm  mactool.sh  style.qss
gitfourchette/dialogs/: aboutdialog.py  commitdialog.py  prefsdialog.py  remoteprogressdialog.py  resetheaddialog.py  trackedbranchdialog.py
gitfourchette/diffview/: diffdocument.py  diffgutter.py  diffrubberband.py  diffview.py  specialdiff.py  specialdiffview.py
gitfourchette/filelists/: committedfiles.py  dirtyfiles.py  filelist.py  filelistmodel.py  stagedfiles.py
gitfourchette/forms/: aboutdialog.py  aboutdialog.ui  absorbsubmodule.ui  banner.py  brandeddialog.py  checkoutcommitdialog.py  checkoutcommitdialog.ui  clonedialog.py  clonedialog.ui  commitdialog.py  commitdialog.ui  conflictview.py  conflictview.ui  contextheader.py  deletetagdialog.py  deletetagdialog.ui  donateprompt.py  donateprompt.ui  identitydialog.py  identitydialog.ui  identitydialog2.ui  keyfilepickercheckbox.py  maintoolbar.py  newbranchdialog.py  newbranchdialog.ui  newtagdialog.py  newtagdialog.ui  openrepoprogress.py  openrepoprogress.ui  prefsdialog.py  protocolbutton.py  pushdialog.py  pushdialog.ui  registersubmoduledialog.py  registersubmoduledialog.ui  remotedialog.py  remotedialog.ui  remotelinkdialog.py  remotelinkdialog.ui  remotelinkprogressdialog.py  (+48 more)
gitfourchette/graph/: __init__.py  __main__.py  graph.py  graphbuilder.py  graphdiagram.py  graphsplicer.py  graphtrickle.py  graphweaver.py
gitfourchette/graphview/: commitlogdelegate.py  commitlogfilter.py  commitlogmodel.py  graphpaint.py  graphview.py
gitfourchette/sidebar/: sidebar.py  sidebardelegate.py  sidebarmodel.py  sidebarmodetabs.py
gitfourchette/tasks/: __init__.py  branchtasks.py  committasks.py  exporttasks.py  indextasks.py  jumptasks.py  loadtasks.py  misctasks.py  nettasks.py  remotetasks.py  repotask.py  stagetasks.py  stashtasks.py  submoduletasks.py  taskbook.py
gitfourchette/toolbox/: __init__.py  actiondef.py  autohidemenubar.py  benchmark.py  calledfromqthread.py  customtabwidget.py  excutils.py  fittedtext.py  gitutils.py  iconbank.py  memoryindicator.py  messageboxes.py  pathutils.py  persistentfiledialog.py  qbusyspinner.py  qcomboboxwithpreview.py  qelidedlabel.py  qfilepickercheckbox.py  qhintbutton.py  qrunnablefunctionwrapper.py  qsignalblockercontext.py  qstatusbar2.py  qtabwidget2.py  qtutils.py  textutils.py  urltooltip.py  validatormultiplexer.py
gitfourchette/ui/: ui_commitdialog.py  ui_signatureform.py
gitfourchette/widgets/: aboutdialog.py  autohidemenubar.py  brandeddialog.py  clonedialog.py  clonedialog.ui  commitdialog.py  commitdialog.ui  committedfilelistview.py  conflictview.py  (+61 more)
icons/: style.qss
lang/: README.md  en.ts  fr.ts  gitfourchette_en.ts  gitfourchette_fr.ts  scrub_ts.sh  update_ts.sh
packaging/: build-macos-app.sh  gitfourchette-linux.spec  gitfourchette-macos.spec  gitfourchette.icns
pkg/: build-macos-app.sh  gitfourchette-linux.spec  gitfourchette-macos.spec  gitfourchette.desktop
test/: __init__.py  conftest.py  fixtures.py  reposcenario.py  test_commitlog.py  test_diff.py  test_externalchanges.py  test_filelist.py  test_gitfourchette.py  test_graph.py  test_graphmarker.py  test_graphplayback.py  test_graphsplicer.py  test_graphsplicing.py  test_graphtrickle.py  test_graphtricklestabilization.py  test_graphview.py  test_hiddencommitsolver.py  test_mainwindow.py  test_navigation.py  test_prefs.py  test_regexes.py  test_remotelink.py  test_sidebar.py  test_tasks_branch.py  test_tasks_commit.py  test_tasks_conflict.py  test_tasks_export.py  test_tasks_net.py  test_tasks_remote.py  test_tasks_remotemgmt.py  test_tasks_remoteops.py  test_tasks_stage.py  test_tasks_stash.py  test_tasks_submodule.py  test_trash.py  test_webhost.py  testutil.py  util.py
ui/: commitdialog.ui
(+43 files in other folders)
